name:                rsa-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/gjasinski/rsa-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Grzegorz Jasinski, Wojtek Chmielarz
maintainer:          gjasinki95 at gmail dot com
copyright:           Copyright: (c) Grzegorz Jasinski, Wojtek Chmielarz
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArgumentParser, RSA
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable rsa-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rsa-haskell
  default-language:    Haskell2010

test-suite rsa-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rsa-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gjasinski/rsa-haskell
